--- a/genesis.properties
+++ b/genesis.properties
@@ -1,1 +1,34 @@
-Variables to be passed to our shell scripts.
+# SERVER GENESIS PROJECT
+# Variables to be sourced to all scripts.
+# Base OS CentOS 6.7
+
+# Server genesis is a laptop that can build your main infra pieces.
+# Genesis is built manaually in the office with inet access, then in DC 
+# with no maybe inet access kickstarts the main servers. 
+# Main servers have inet access to puppet forge and repos.
+
+# The genesis server
+SERVERNAME=genesis${DOMAINNAME}
+IPADDRESS=192.168.136.100
+SUBNET=192.168.136.0
+NETMASK=255.255.255.0
+GATEWAY=192.168.136.1
+
+# Our new domain name
+DOMAINNAME=local.lan
+
+# Regular user 
+HOME=/home/genesis
+USERNAME=genesis
+USERPASSWD=password
+
+# Resolvers for the new builds
+DNS=192.168.136.200
+
+# Additional packages for genesis server
+PACKAGES='vim-enhanced wget dhcp syslinux tftp-server xinetd httpd git'
+
+# Other variables
+HTTPD_ROOT=/var/www/html/
+DISTRO=CentOS-6.7-x86_64
+
