stuff Signed-off-by: root <root@genesis.local.lan>

--- a/genesis.properties
+++ b/genesis.properties
@@ -8,7 +8,7 @@
 # Main servers have inet access to puppet forge and repos.
 
 # The genesis server
-SERVERNAME=genesis${DOMAINNAME}
+SERVERNAME=genesis.local.lan
 IPADDRESS=192.168.136.100
 SUBNET=192.168.136.0
 NETMASK=255.255.255.0
@@ -16,11 +16,6 @@ GATEWAY=192.168.136.1
 
 # Our new domain name
 DOMAINNAME=local.lan
-
-# Regular user 
-HOME=/home/genesis
-USERNAME=genesis
-USERPASSWD=password
 
 # Resolvers for the new builds
 DNS=192.168.136.200
