stuff Signed-off-by: Kevin McNally <kevinmcnally26@gmail.com>

--- a/genesis.properties
+++ b/genesis.properties
@@ -7,23 +7,48 @@
 # with no maybe inet access kickstarts the main servers. 
 # Main servers have inet access to puppet forge and repos.
 
-# The genesis server
-SERVERNAME=genesis.local.lan
-IPADDRESS=192.168.136.100
-SUBNET=192.168.136.0
-NETMASK=255.255.255.0
-GATEWAY=192.168.136.1
+# The genesis server - IPADDRESS will be eventually changed to the DC subnet
+
+GENESIS_SERVER=genesis.local.lan
+# 172.16.105.100 when moved to DC
+GENESIS_IP=192.168.136.100   
+
+GENESIS_SUBNET=172.16.105.0
+GENESIS_NETMASK=255.255.255.0
 
 # Our new domain name
 DOMAINNAME=local.lan
 
-# Resolvers for the new builds
-DNS=192.168.136.200
-
-# Additional packages for genesis server
+# Packages for genesis server
 PACKAGES='vim-enhanced wget dhcp syslinux tftp-server xinetd httpd git'
 
 # Other variables
-HTTPD_ROOT=/var/www/html/
+HTTP_ROOT=/var/www/html/
+HTTP_CENTOS=/var/www/html/centos-6
 DISTRO=CentOS-6.7-x86_64
+
+# Hosts with DC ips
+PUPPET_SERVER=puppet001.${DOMAINNAME}
+PUPPET_IP=172.16.105.10
+PUPPET_MAC=00:0C:29:46:8C:A1
+
+KICK_SERVER=kickstart001.${DOMAINNAME}
+KICK_IP=172.16.105.20
+KICK_MAC=00:0C:29:46:8C:A2
+
+FOREMAN_SERVER=foreman001.${DOMAINNAME}
+FOREMAN_IP=172.16.105.30
+FOREMAN_MAC=00:0C:29:46:8C:A3
+
+PULP_SERVER=pulp001.${DOMAINNAME}
+PULP_IP=172.16.105.50
+PULP_MAC=00:0C:29:46:8C:A4
+
+DNS_SERVER=pulp001.${DOMAINNAME}
+# Resolvers for the new builds at DC
+DNS_IP=172.16.105.50
+DNS_MAC=00:0C:29:46:8C:A5
+
+
+
 
