stuff Signed-off-by: Kevin McNally <kevinmcnally26@gmail.com>

--- a/genesis.properties
+++ b/genesis.properties
@@ -10,8 +10,8 @@
 # The genesis server - IPADDRESS will be eventually changed to the DC subnet
 
 GENESIS_SERVER=genesis.local.lan
-# 172.16.105.100 when moved to DC
-GENESIS_IP=192.168.136.100   
+GENESIS_IP=172.16.105.100           # when moved to DC
+#GENESIS_IP=192.168.136.100   
 
 GENESIS_SUBNET=172.16.105.0
 GENESIS_NETMASK=255.255.255.0
@@ -27,27 +27,27 @@ HTTP_ROOT=/var/www/html/
 HTTP_CENTOS=/var/www/html/centos-6
 DISTRO=CentOS-6.7-x86_64
 
-# Hosts with DC ips
+# Hosts with DC ips and macs
 PUPPET_SERVER=puppet001.${DOMAINNAME}
 PUPPET_IP=172.16.105.10
-PUPPET_MAC=00:0C:29:46:8C:A1
+PUPPET_MAC=00:0C:29:46:8C:B1
 
 KICK_SERVER=kickstart001.${DOMAINNAME}
 KICK_IP=172.16.105.20
-KICK_MAC=00:0C:29:46:8C:A2
+KICK_MAC=00:0C:29:46:8C:B2
 
 FOREMAN_SERVER=foreman001.${DOMAINNAME}
 FOREMAN_IP=172.16.105.30
-FOREMAN_MAC=00:0C:29:46:8C:A3
+FOREMAN_MAC=00:0C:29:46:8C:B3
 
 PULP_SERVER=pulp001.${DOMAINNAME}
-PULP_IP=172.16.105.50
-PULP_MAC=00:0C:29:46:8C:A4
+PULP_IP=172.16.105.40
+PULP_MAC=00:0C:29:46:8C:B4
 
-DNS_SERVER=pulp001.${DOMAINNAME}
+DNS_SERVER=dns001.${DOMAINNAME}
 # Resolvers for the new builds at DC
 DNS_IP=172.16.105.50
-DNS_MAC=00:0C:29:46:8C:A5
+DNS_MAC=00:0C:29:46:8C:B5
 
 
 
